--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h4>Примеры</h4>
     <p>Первый массив: 2132 8332 6738</p>
-    <p>Второй массив: 4576 8394 6912</p><br/>
+    <p>Второй массив: 4576 8394 6912</p>
+    <p>Универсальный массив: 4576 8394 6912 2132 8332 6738</p><br/>
     <form>
         <p>Первый массив <input name="A" id="arrayA" />     
         Второй массив <input name="B" id="arrayB" /> </p>
